Use ByteCodes from JVM instead of local OpCodes.